Adicionando a autenticação nas rotas de transfers
