# middleware/authMiddleware.js
@@ -1,0 +1,20 @@
+const jwt = require("jsonwebtoken");
+
+const SECRET = process.env.JWT_SECRET || "segredo_super_secreto";
+
+function authMiddleware(req, res, next) {
+  const authHeader = req.headers["authorization"];
+  if (!authHeader || !authHeader.startsWith("Bearer ")) {
+    return res.status(401).json({ error: "Token não informado" });
+  }
+  const token = authHeader.split(" ")[1];
+  try {
+    const decoded = jwt.verify(token, SECRET);
+    req.user = decoded;
+    next();
+  } catch (err) {
+    return res.status(401).json({ error: "Token inválido" });
+  }
+}
+
+module.exports = authMiddleware;
