# swagger.json
@@ -5,6 +5,16 @@
     "version": "1.0.0",
     "description": "API para login, registro, consulta de usuários e transferências."
   },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
+  "security": [{ "bearerAuth": [] }],
   "paths": {
     "/users/register": {
       "post": {
@@ -66,6 +76,7 @@
     "/transfers": {
       "post": {
         "summary": "Realizar transferência",
+        "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -89,6 +100,7 @@
       },
       "get": {
         "summary": "Listar transferências",
+        "security": [{ "bearerAuth": [] }],
         "responses": {
           "200": { "description": "Lista de transferências" }
         }
